--- a/Resources/Prototypes/.Chi-Firka/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/.Chi-Firka/Entities/Objects/Tools/tools.yml
@@ -18,6 +18,16 @@
     speedModifier: 2
     useSound:
       path: /Audio/Items/ratchet.ogg
+  - type: EmitSoundOnPickup
+    sound:
+      path: /Audio/SimpleStation14/Items/Handling/wrench_pickup.ogg
+      params:
+        volume: -2
+  - type: EmitSoundOnDrop
+    sound:
+      path: /Audio/SimpleStation14/Items/Handling/wrench_drop.ogg
+      params:
+        volume: -2
   - type: EmitSoundOnLand
     sound:
       path: /Audio/Items/wrench_drop.ogg
