--- a/Resources/Prototypes/_soup/boombox.yml
+++ b/Resources/Prototypes/_soup/boombox.yml
@@ -7,7 +7,7 @@
   - type: Item
     size: Huge
   - type: Sprite
-    sprite: _Sunrise/Objects/Devices/boombox.rsi
+    sprite: _Sunrise/boombox.rsi
     layers:
     - state: "off"
       map: ["enum.TapePlayerVisualLayers.Base"]
@@ -40,7 +40,7 @@
   - type: Item
     size: Huge
   - type: Sprite
-    sprite: _Sunrise/Objects/Devices/syndie_boombox.rsi
+    sprite: _Sunrise/syndie_boombox.rsi
     layers:
     - state: "off"
       map: ["enum.TapePlayerVisualLayers.Base"]
