--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
@@ -166,7 +166,8 @@
 - type: entity
   name: Lecter
   parent: BaseWeaponRifle
-  id: WeaponRifleLecter
+  id: WeaponRifleLecterOld
+  suffix: old
   description: A high end military grade assault rifle. Uses .20 rifle ammo.
   components:
   - type: Sprite
